# usbfluxd

./: .gitignore  Makefile.am  Makefile.notarize  README  README.md  autogen.sh  build-gui.sh  configure.ac  makedmg.sh
USBFlux/: DS_Store  VolumeIcon.icns  template.dmg.bz2
USBFlux/USBFlux/: AppDelegate.h  AppDelegate.m  Corellium.h  Corellium.m  Info.plist  PasswordEntry.h  PasswordEntry.m  Preferences.h  STHTTPRequest.h  STHTTPRequest.m  SimpleTextInput.h  SimpleTextInput.m  main.m  terminate.sh
USBFlux/USBFlux.xcodeproj/: project.pbxproj
USBFlux/USBFlux.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
USBFlux/USBFlux/Assets.xcassets/AppIcon.appiconset/: Contents.json
USBFlux/USBFlux/Base.lproj/: MainMenu.xib
src/: Makefile.am  client.c  client.h  device.c  device.h  log.c  log.h  main.c  socket.c  socket.h  usb.c  usbmux_remote.c  usbmux_remote.h  utils.c  utils.h
tools/: Makefile.am  usbfluxctl.c
usbfluxd/: Makefile.am  client.c  client.h  log.c  main.c  socket.c  socket.h  usbmux_remote.c  usbmux_remote.h  utils.c  utils.h
